--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.2",
+    "axios": "^1.6.8",
+    "cookies": "^0.9.1",
     "formik": "^2.4.5",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "next": "14.1.4",
     "react": "^18",
     "react-custom-scrollbars-2": "^4.5.0",
