--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "formik": "^2.4.5",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "next": "14.1.4",
     "react": "^18",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-paginate": "^8.2.0",
     "react-redux": "^9.1.0",
     "react-select": "^5.8.0",
     "swiper": "^11.0.7",
