--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.30.1",
     "next": "14.1.4",
     "react": "^18",
+    "react-accessible-accordion": "^5.0.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
