--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "novel-ingredients-store",
+  "name": "ingredientsbank-store",
   "version": "0.1.0",
   "private": true,
   "scripts": {
