--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-accessible-accordion": "^5.0.0",
     "react-custom-scrollbars-2": "^4.5.0",
     "react-dom": "^18",
+    "react-error-boundary": "^4.0.13",
     "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.0.1",
     "react-paginate": "^8.2.0",
